Correct left spacing for the grid on mobile

--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@ output{
     width: 300px;
     height: 300px;
     top: -11px;
-    left: -118px;
+    left: -80px;
   }
 
   .controls{
